# z-serial

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  rust.yml
examples/: serial-echo.rs
src/: lib.rs
tests/: crc.rs
