[package]
name = "z-serial"
version = "0.3.0-dev-3-g54be262"
edition = "2021"
repository = "https://github.com/ZettaScaleLabs/z-serial"
homepage = "http://zenoh.io"
authors = [ "gabrik <gabriele.baldoni@gmail.com>" ]
license = " EPL-2.0 OR Apache-2.0"
categories = [ "network-programming" ]
description = "Zenoh Serial Framing"
readme = "README.md"

[dependencies]
tokio-serial = "5.4.1"
futures = "0.3.21"
cobs = "0.2"
log = "0.4"

[dependencies.tokio]
version = "1.17.0"
features = [ "io-util" ]

[dev-dependencies]
env_logger = "0.9.0"
rand = "0.8"

[dev-dependencies.clap]
version = "3.1"
features = [ "derive" ]

[dev-dependencies.tokio]
version = "1.17.0"
features = [ "full" ]